Add API Gateway into pom

--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,8 @@
 		<module>tiergesund-visits-service</module>
 	    <module>tiergesund-config-server</module>
         <module>tiergesund-discovery-server</module>
-<!--
         <module>tiergesund-api-gateway</module>
--->
+        <module>tiergesund-blog-service</module>
     </modules>
 
     <properties>
