--- a/tiergesund-config-server/build.gradle
+++ b/tiergesund-config-server/build.gradle
@@ -1,11 +1,13 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.0.6'
-	id 'io.spring.dependency-management' version '1.1.0'
+	id 'org.springframework.boot' version '3.1.3'
+	id 'io.spring.dependency-management' version '1.1.3'
+    //id 'org.graalvm.buildtools.native' version '0.9.27'
 }
 
+
 group = 'com.feurle.tiergesund.config'
-version = '0.0.1-SNAPSHOT'
+version = '0.1'
 sourceCompatibility = '17'
 
 repositories {
@@ -13,14 +15,14 @@ repositories {
 }
 
 ext {
-	set('springCloudVersion', "2022.0.2")
+	set('springCloudVersion', "2022.0.4")
 }
 
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-config-server'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
 }
 
 dependencyManagement {
@@ -32,3 +34,4 @@ dependencyManagement {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
