--- a/tiergesund-discovery-server/build.gradle
+++ b/tiergesund-discovery-server/build.gradle
@@ -1,11 +1,12 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.0.6'
-	id 'io.spring.dependency-management' version '1.1.0'
+	id 'org.springframework.boot' version '3.1.3'
+	id 'io.spring.dependency-management' version '1.1.3'
+    //id 'org.graalvm.buildtools.native' version '0.9.27'
 }
 
 group = 'com.feurle.tiergesund.discovery'
-version = '0.0.1-SNAPSHOT'
+version = '0.1'
 sourceCompatibility = '17'
 
 repositories {
@@ -14,13 +15,16 @@ repositories {
 }
 
 ext {
-	set('springCloudVersion', "2022.0.2")
+	set('springCloudVersion', "2022.0.4")
 }
 
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.glassfish.jaxb:jaxb-runtime'
 }
