Change some services to gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,6 @@ rootProject.name = 'tiergesund-webapp'
 
 include 'tiergesund-config-server'
 include 'tiergesund-discovery-server'
+include 'tiergesund-admin-server'
 include 'tiergesund-vets-service'
+
