--- a/tiergesund-config-server/build.gradle
+++ b/tiergesund-config-server/build.gradle
@@ -1,13 +1,13 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.3'
-	id 'io.spring.dependency-management' version '1.1.3'
+	id 'org.springframework.boot' version '3.1.7'
+	id 'io.spring.dependency-management' version '1.1.4'
     //id 'org.graalvm.buildtools.native' version '0.9.27'
 }
 
 
 group = 'com.feurle.tiergesund.config'
-version = '0.1'
+version = '0.0.1'
 sourceCompatibility = '17'
 
 repositories {
@@ -31,7 +31,15 @@ dependencyManagement {
 	}
 }
 
+tasks.named('bootBuildImage') {
+    builder = 'paketobuildpacks/builder-jammy-base:latest'
+}
+
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
 
+springBoot {
+    buildInfo()
+}
