--- a/tiergesund-discovery-server/build.gradle
+++ b/tiergesund-discovery-server/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.3'
-	id 'io.spring.dependency-management' version '1.1.3'
+	id 'org.springframework.boot' version '3.1.7'
+	id 'io.spring.dependency-management' version '1.1.4'
     //id 'org.graalvm.buildtools.native' version '0.9.27'
 }
 
@@ -37,4 +37,13 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.named('bootBuildImage') {
+    builder = 'paketobuildpacks/builder-jammy-base:latest'
+}
+
+
+springBoot {
+    buildInfo()
 }
