--- a/tiergesund-vets-service/build.gradle
+++ b/tiergesund-vets-service/build.gradle
@@ -10,8 +10,8 @@ buildscript {
 
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.3'
-	id 'io.spring.dependency-management' version '1.1.3'
+	id 'org.springframework.boot' version '3.1.7'
+	id 'io.spring.dependency-management' version '1.1.4'
    // id 'org.graalvm.buildtools.native' version '0.9.27'
 }
 
@@ -67,7 +67,15 @@ openApiGenerate {
     generatorName.set("spring")
 }
 
+tasks.named('bootBuildImage') {
+    builder = 'paketobuildpacks/builder-jammy-base:latest'
+}
+
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+springBoot {
+    buildInfo()
 }
