--- a/tiergesund-discovery-server/build.gradle
+++ b/tiergesund-discovery-server/build.gradle
@@ -1,49 +1,9 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.1.7'
-	id 'io.spring.dependency-management' version '1.1.4'
-    //id 'org.graalvm.buildtools.native' version '0.9.27'
-}
-
-group = 'com.feurle.tiergesund.discovery'
-version = '0.1'
-sourceCompatibility = '17'
-
-repositories {
-	mavenCentral()
-	maven { url 'https://artifactory-oss.prod.netflix.net/artifactory/maven-oss-candidates' }
-}
-
-ext {
-	set('springCloudVersion', "2022.0.4")
+    id 'tiergesund.spring-boot'
 }
 
 dependencies {
-	implementation 'org.springframework.cloud:spring-cloud-starter'
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
-    implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.glassfish.jaxb:jaxb-runtime'
-}
-
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
-}
-
-tasks.named('test') {
-	useJUnitPlatform()
-}
-
-tasks.named('bootBuildImage') {
-    builder = 'paketobuildpacks/builder-jammy-base:latest'
-}
-
-
-springBoot {
-    buildInfo()
 }
