--- a/tiergesund-admin-server/build.gradle
+++ b/tiergesund-admin-server/build.gradle
@@ -1,49 +1,8 @@
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.1.7'
-    id 'io.spring.dependency-management' version '1.1.4'
-}
-
-group = 'com.feurle.tiergesund.admin'
-version = '0.0.1'
-
-java {
-    sourceCompatibility = '17'
-}
-
-repositories {
-    mavenCentral()
-}
-
-ext {
-    set('springCloudVersion', "2022.0.4")
-    set('springBootAdminVersion', "3.1.5")
+    id 'tiergesund.spring-boot'
 }
 
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'de.codecentric:spring-boot-admin-starter-server'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-dependencyManagement {
-    imports {
-        mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-    }
-}
-
-tasks.named('bootBuildImage') {
-    builder = 'paketobuildpacks/builder-jammy-base:latest'
-}
-
-
-tasks.named('test') {
-    useJUnitPlatform()
-}
-
-springBoot {
-    buildInfo()
 }
